# coreferee

./: LICENSE  MANIFEST.in  README.md  SHORTREADME.md  setup.cfg
.github/workflows/: github-actions-test.yml  main.yml  test-coreferee.yml
coreferee/: __init__.py  __main__.py  annotation.py  data_model.py  errors.py  github-actions-test.yml  manager.py  rules.py  tendencies.py  test_utils.py
coreferee/lang/common/data/: LICENSE
coreferee/lang/de/: config.cfg  language_specific_rules.py
coreferee/lang/en/: config.cfg  language_specific_rules.py
coreferee/lang/fr/: config.cfg  language_specific_rules.py
coreferee/lang/fr/data/: COPYING  LICENSE
coreferee/lang/pl/: config.cfg  language_specific_rules.py
coreferee/training/: loaders.py  model.py  train.py
models/de/: setup.cfg
models/en/: setup.cfg
models/fr/: setup.cfg
models/pl/: setup.cfg
sh/: download_corpora.sh
tests/common/: test_annotation_common.py  test_data_model_common.py  test_errors.py  test_rules_common.py  test_tech_common.py  test_tendencies_common.py  test_wiring_common.py
tests/de/: qcktest.py  test_rules_de.py  test_smoke_tests_de.py
tests/en/: test_rules_en.py  test_smoke_tests_en.py
tests/fr/: test_rules_fr.py  test_smoke_tests_fr.py
tests/pl/: test_rules_pl.py  test_smoke_tests_pl.py
