[metadata]
name = coreferee
version = 1.2.0
description = Coreference resolution for English, French, German and Polish, optimised for limited training data and easily extensible for further languages
long_description = file: SHORTREADME.md
long_description_content_type = text/markdown
url = https://github.com/msg-systems/coreferee
author = Richard Paul Hudson, Explosion AI
author_email = richard@explosion.ai
license = MIT
keywords= nlp, spacy, spacy-extension, python, machine-learning, coreference, anaphora, coreference-resolution, anaphora-resolution
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    Intended Audience :: Education
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Natural Language :: French
    Natural Language :: German
    Natural Language :: Polish
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Text Processing :: Linguistic

[options]
include_package_data = True
packages = find:
python_requires = >=3.6,<3.11
install_requires =
  spacy>=3.0.0,<3.4.0
[options.package_data]
* = *.dat, *.cfg
